<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZulipClient</string>
    <string name="message" tools:ignore="Typos">Я луна. Я кошка, которая очень забавно хрустит, хрум хрум хрум хрум хрум хрум хрум хрум</string>
    <string name="username">Darrell Steward</string>
    <string name="avatar_description">Avatar</string>
    <string name="type_hint">Написать…</string>
    <string name="topic_name">Topic: #testing</string>
    <string name="channel_name">Channel</string>
    <string name="search_title">Search</string>
    <string name="add_button_description">Add reaction button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">darrel@company.com</string>
    <string name="activity">In a meeting</string>
    <string name="status_active">active</string>
    <string name="status_idle">idle</string>
    <string name="status_offline">offline</string>
    <string name="log_out">Log out</string>
    <string name="search_hint">Search…</string>
    <string name="search_icon">Search icon</string>
    <string name="tab_subscribed">Subscribed</string>
    <string name="tab_all_streams">All streams</string>
    <string name="message_count_example">1240 mes</string>
    <string name="topic">Testing</string>
    <string name="messenger_action_button">Messenger action button</string>
    <string name="users_hint">Users…</string>
    <string name="profile">Profile</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="retry">Retry</string>
    <string name="user_avatar">User avatar</string>
    <string name="message_error">Error occurred while sending a message</string>
    <string name="reaction_error">Error occurred while changing a reaction</string>
    <string name="topic_loading_error">Error occurred while loading %1$s\'s topics</string>

    <string name="stream_template">#%1$s</string>
    <string name="topic_template">Topic: #%1$s</string>

    <string name="messages_count_template">%1$d mes</string>
    <string name="message_page_error">Error occurred while loading messages page</string>
    <string name="status_unknown">unknown</string>
    <string name="status_load_error">Unable to load statuses</string>
</resources>