<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/message_bg"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:contentDescription="@string/avatar_description"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@drawable/avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearanceUsernameInChat"
        tools:text="@string/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearanceMessage"
        tools:text="@string/message" />

    <com.viktorger.zulip_client.app.core.ui.custom_view.FlexBoxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</merge>