<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.streams.StreamsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurfaceVariant"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etChannelsSearch"
            style="@style/EditTextSearchStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:hint="@string/search_hint" />

        <ImageButton
            android:id="@+id/ibChannelsSearch"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="28dp"
            android:background="@null"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlChannels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceVariant"
        android:paddingBottom="28dp"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorColor="@color/sea_green"
        app:tabIndicatorFullWidth="false"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="?attr/colorOnSurface"
        app:tabTextAppearance="@style/TextAppearanceTab">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_subscribed" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_all_streams" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpChannels"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>