<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/margin_large"
    android:paddingVertical="@dimen/margin_extra_small">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivUserAvatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@drawable/avatar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivUserStatus"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@color/status_active_color"
        app:layout_constraintBottom_toBottomOf="@id/sivUserAvatar"
        app:layout_constraintEnd_toEndOf="@id/sivUserAvatar"
        android:contentDescription="@string/user_avatar" />

    <TextView
        android:id="@+id/tvUserUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:lines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearanceUsernameInPeople"
        app:layout_constrainedWidth="true"

        app:layout_constraintBottom_toTopOf="@id/tvUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sivUserAvatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:lines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearanceEmail"
        app:layout_constrainedWidth="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sivUserAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvUserUsername"
        tools:text="@string/email" />

</androidx.constraintlayout.widget.ConstraintLayout>